--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "laravel/breeze": "^1.27",
         "laravel/framework": "^10.10",
         "laravel/sanctum": "^3.3",
+        "laravel/socialite": "^5.12",
         "laravel/tinker": "^2.8"
     },
     "require-dev": {
