--- a/package.json
+++ b/package.json
@@ -10,8 +10,13 @@
         "alpinejs": "^3.4.2",
         "autoprefixer": "^10.4.2",
         "axios": "^1.6.1",
+        "eslint": "^8.57.1",
+        "eslint-config-prettier": "^10.1.5",
+        "eslint-plugin-prettier": "^5.4.0",
         "laravel-vite-plugin": "^1.0.0",
         "postcss": "^8.4.31",
+        "prettier": "^3.5.3",
+        "prettier-eslint": "^16.4.2",
         "tailwindcss": "^3.1.0",
         "vite": "^5.0.0"
     },
